--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tsci/Heinrich-XIAO.CH32V003F4P6": "^0.1.0",
-    "@tsci/seveibar.push-button": "^0.1.0"
+    "@tsci/seveibar.push-button": "^0.1.0",
+    "@tscircuit/core": "^0.0.753"
   }
 }
