--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "start": "tsci dev"
   },
   "devDependencies": {
-    "@types/react": "^19.1.16",
-    "tscircuit": "^0.0.701"
+    "@types/react": "^19.1.16"
   },
   "dependencies": {
     "@tsci/Heinrich-XIAO.CH32V003F4P6": "^0.1.0",
     "@tsci/seveibar.push-button": "^0.1.0",
-    "@tscircuit/core": "^0.0.753"
+    "tscircuit": "^0.0.701"
   }
 }
